--- a/src/main/webapp/css/sysdig.css
+++ b/src/main/webapp/css/sysdig.css
@@ -1,24 +1,3 @@
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-th, td {
-  text-align: left;
-  padding: 8px;
-  transition: all 0.3s;
-}
-
-tr:nth-child(even) {
-  background-color: #eaf2f3
-}
-
-th {
-  background-color: #3c7fe2;;
-  color: #EEDC00;
-}
-
-tr td:hover {
-  background: #5BC2E7;
-  color: #FFFFFF;
+div.image-id {
+    font-size: 0.8em;
 }
